# work_time_tracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: clang-format-check.yml
core/: CMakeLists.txt  main.cpp
core/core_resources/: resources.qrc
core/include/: DataStorage.h  SplashScreen.h  TimeLabel.h  mainwindow.h  splash_screen.h
core/src/: DataStorage.cpp  SplashScreen.cpp  TimeLabel.cpp  mainwindow.cpp
plugins/time_manipulator/: CMakeLists.txt
plugins/time_manipulator/include/: TimeManipulator.h
plugins/time_manipulator/src/: TimeManipulator.cpp
sdk/: CMakeLists.txt
sdk/include/: Plugin.h
sdk/src/: Plugin.cpp
src/core/: mainwindow.cpp
utils/data_storage/: DataStorage.cpp  DataStorage.h
utils/data_storage/components/: Calendar.cpp  Calendar.h  Today.cpp  Today.h
utils/helpers/: converter.h
utils/json_storage/: JsonStorage.cpp  JsonStorage.h
utils/user_settings/: UserSettings.cpp  UserSettings.h
widgets/: Calendar.cpp  Calendar.h  ClockFaceWidget.cpp  ClockFaceWidget.h  TimeLabel.cpp  TimeLabel.h
widgets/dialogs/: CalendarDialog.cpp  CalendarDialog.h
widgets/dialogs/CalendarDialog/: CalendarDialog.cpp  CalendarDialog.h
widgets/dialogs/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h
